// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should render the button 1`] = `
<button
  class="sc-beqWaB izZfKp"
>
  Save
</button>
`;

exports[`Button > should render the button 2`] = `
<button
  class="sc-beqWaB izZfKp"
>
  Save
</button>
`;

exports[`Button > should render the button with icon variant 1`] = `
<button
  class="sc-beqWaB itQUyh"
>
  Save
</button>
`;

exports[`Button > should render the button with solid variant 1`] = `
<button
  class="sc-beqWaB izZfKp"
>
  Save
</button>
`;

exports[`Button > should render the button with underline variant 1`] = `
<button
  class="sc-beqWaB gbwlyn"
>
  Save
</button>
`;

exports[`Button > should render the button with variant 1`] = `
<button
  class="sc-beqWaB izZfKp"
>
  Save
</button>
`;
